# psy_diary

./: pyproject.toml
psy_diary/: main.py  main2.py
tests/: __init__.py
